--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,9 @@
 }
 
 video {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   object-fit: cover;
+  position: absolute;
   z-index: -1;
-}
-
-.splide__slide img {
-  width: 100%;
-  height: 25vh;
 }
